--- a/test/index.html
+++ b/test/index.html
@@ -31,6 +31,11 @@
 			
 			var b = t.getChildByName("test2");
 			console.log(b);
+
+			var inu = new CACILDS.Input("checkbox");
+			t.addChild(inu);
+
+			console.log(inu.value())
 			
 			console.log(t);
 			
